@@ -1,5 +1,6 @@
 Changelog for mk-query-digest:
 
+   * Added the ability to parse embedded attributes (issue 177).
    * Log entries without a Time property crashed --review (issue 263).
    * All-zero timestamps displayed in unwanted places (issue 202).
 
